--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,7 +56,7 @@ steps:
 - task: UseDotNet@2
   inputs:
     packageType: sdk
-    version: 4.8
+    version: 4.x
 - task: DotNetCoreCLI@2
   inputs:
     command: 'build'
