--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -123,7 +123,7 @@ steps:
       $FolderName = $Date +"-Obfucated"
       $BaseURL = "https://database.deta.sh/v1/${env:BaseProjectKey}/Tools/items"
       $jsonBase = @{}
-      
+      echo  $BaseURL 
       function Get-ProcessOutput
       {
           Param (
