Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -81,9 +81,9 @@ steps:
       wget https://github.com/mkaring/ConfuserEx/releases/download/v1.6.0/ConfuserEx-CLI.zip -o ConfuserEx-CLI.zip
       Expand-Archive .\ConfuserEx-CLI.zip
       
-      $LEVEL = "none"
+      $LEVEL = "normal"
       $exePath = (Get-ChildItem -Path $(system.defaultworkingdirectory) -Include '*.exe' -Recurse | Where-Object {$_.DirectoryName -match 'release' -and $_.DirectoryName -match 'bin' } ).FullName
-      
+      echo $exePath
       $baseDir = Split-Path $exePath -Parent
       
       $confuserConf = 
@@ -91,13 +91,22 @@ steps:
       <project outputDir="$(build.artifactstagingdirectory)\Confused" baseDir="$baseDir" xmlns="http://www.google.com">
           <module path="$exePath" >
               <rule pattern="true" preset="$LEVEL" inherit="false">
-              </rule>
+                <protection id="anti ildasm" />
+                <protection id="anti debug" action="remove" /> <!-- this breaks Assembly.Load. Maybe just use donut?  -->
+                <protection id="anti dump" action="remove" /> <!-- this breaks sharphound --> 
+                <protection id="anti tamper" action="remove" /> <!-- this breaks Assembly.Load. Maybe just use donut?  -->
+                <protection id="invalid metadata" />
+                <protection id="resources" action="remove" /> <!-- this breaks sharphound --> 
+                <protection id="constants" />
+                <protection id="ctrl flow" />
+                <protection id="typescramble" action="remove" />
+                <protection id="rename" action="remove" /> <!-- This just killed seatbelt for some reason --> 
           </module>
       </project>
       "@
       
       echo $confuserConf | Set-Content -path conf.crproj
-      #.\ConfuserEx-CLI\Confuser.CLI.exe .\conf.crproj -n
+      .\ConfuserEx-CLI\Confuser.CLI.exe .\conf.crproj -n
 
 - task: PowerShell@2
   displayName: 'Move data to Deta'
