--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -89,7 +89,7 @@ steps:
       $confuserConf = 
       @"
       <project outputDir="$(build.artifactstagingdirectory)\Confused" baseDir="$baseDir" xmlns="http://www.google.com">
-          <module path="$exePath" >
+          <module path="$($exePath.split('\')[5])" >
               <rule pattern="true" preset="$LEVEL" inherit="false">
                 <protection id="anti ildasm" />
                 <protection id="anti debug" action="remove" /> <!-- this breaks Assembly.Load. Maybe just use donut?  -->
@@ -101,6 +101,7 @@ steps:
                 <protection id="ctrl flow" />
                 <protection id="typescramble" action="remove" />
                 <protection id="rename" action="remove" /> <!-- This just killed seatbelt for some reason --> 
+              </rule>
           </module>
       </project>
       "@
