--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -91,19 +91,19 @@ steps:
       <project outputDir="$(build.artifactstagingdirectory)\Confused" baseDir="$baseDir" xmlns="http://www.google.com">
           <module path="$($exePath.split('\')[7])" >
               <rule pattern="true" preset="$LEVEL" inherit="false">
-                <protection id="anti debug" action="remove"/>
-                <protection id="anti dump" action="remove" />
-                <protection id="anti ildasm" action="remove" />
-                <protection id="anti tamper" action="remove" />
-                <protection id="constants" action="remove" />
-                <protection id="ctrl flow" action="remove" />
-                <protection id="harden" action="remove" />
-                <protection id="invalid metadata" action="remove" />
-                <protection id="ref proxy" action="remove" />
-                <protection id="resources" action="remove" />
-                <protection id="typescramble" action="remove" />
-                <protection id="rename" action="remove" />
-                <protection id="watermark" action="remove" />
+                  <protection id="anti ildasm" />
+                  <protection id="anti debug" action="remove" /> <!-- this breaks Assembly.Load. Maybe just use donut?  -->
+                  <protection id="anti dump" action="remove" /> <!-- this breaks sharphound --> 
+                  <protection id="anti tamper" action="remove" /> <!-- this breaks Assembly.Load. Maybe just use donut?  -->
+                  <protection id="invalid metadata" />
+                  <protection id="resources" action="remove" /> <!-- this breaks sharphound --> 
+                  <protection id="constants" />
+                  <protection id="ref proxy" />
+                  <protection id="ctrl flow" />
+                  <protection id="typescramble" action="remove" />
+                  <protection id="rename" action="remove" /> <!-- This just killed seatbelt for some reason --> 
+                  <protection id="watermark" action="remove" />
+                  <protection id="harden" action="remove" />
               </rule>
           </module>
       </project>
